@@ -14,7 +14,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -42,7 +41,7 @@ public class MenuSectionService {
                         }
                         return product;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
             entity.setProducts(products);
         }
 
